[package]
name = "minecraft-auth"
version = "0.1.0"
description = "Provides the connections needed for the server"
authors = ["ismaileke"]
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["native-tls", "json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
openssl = "0.10.70"
chrono = "0.4.39"
